# rustpower

./: .gitignore  CITATION.cff  Cargo.toml  Readme.md  V5_Architecture_Report_CN.md  changelog.md  check_gen_idx.py  check_pipsopf.py  check_poly_cost.py  compare_opf.py  dump_poly_cost.py  dump_pp_matrices.py  infer.md  inspect_pips.py  inspect_pp_opf.py  inspect_x0.py  pyproject.toml  readme  readme.html  rustpower.pyi  rustpower潮流计算设计介绍.md  test_system.toml  tt.toml  verify_pegase_objective.py
.github/workflows/: python-wheels.yml
cases/: example_to_generate_cases.ipynb  networks.json
cases/IEEE118/: bus.csv  ext_grid.csv  gen.csv  line.csv  load.csv  poly_cost.csv  sgen.csv  shunt.csv  trafo.csv
cases/IEEE39/: poly_cost.csv
cases/pegase9241/: bus.csv  ext_grid.csv  gen.csv  line.csv  load.csv  pegase9241.toml  sgen.csv  shunt.csv  time_series.toml  trafo.csv
cases/test/: new_input_PFLV_modified.json
cases/test/old/: new_input_PFLV_modified.json
crates/rustpower-sol-klu/: Cargo.toml
crates/rustpower-sol-klu/rustpower-klu-sys/: Cargo.toml  build.rs  wrapper.h
crates/rustpower-sol-klu/src/: lib.rs
crates/rustpower_proc_marco/: Cargo.toml
crates/rustpower_proc_marco/src/: lib.rs
docs/: manifest.md  opf_algorithm_design.md  opf_v1_to_v4_evolution.md  pandapower_integration_report.md  python_api.md
docs/design/: python_api_v2.md
examples/: archive_example.rs  arrow_archive_example.rs  bench_all.rs  bench_ecs_ieee39.rs  bench_ieee39.rs  bench_parallel_klu.rs  dump_118_aurora.rs  ecs_app_plugin.rs  ecs_net.rs  ecs_vs_oop.rs  evaluation_parquet.rs  ieee118.rs  pegase9241.rs  pegase9241_ecs.rs  test_dynamic_rebuild.py  test_stability.py  time_series.rs  tutorial_lesson_1.ipynb  tutorial_lesson_2.ipynb  tutorial_lesson_3.ipynb  tutorial_lesson_4.ipynb  tutorial_lesson_5.ipynb  tutorial_loading_case.py  tutorial_simple_grid.py  v5_compare.rs  verify_python_api.py  verify_qlim.py
klu_rs/: Cargo.toml
klu_rs/klu-sys/: Cargo.toml  build.rs
klu_rs/klu-sys/src/: lib.rs
klu_rs/src/: lib.rs
scripts/: _calc_numbers.py  bench_pp_opf.py  bench_py.py  comprehensive_benchmark.py  deep_profile.py  duckdb_analysis_demo.py  evaluate_parquet.py  inspect_case_cols.py  inspect_duckdb_cols.py  pandapower_integration_demo.py  pandapower_optimized_test.py  pandapower_solver_official.py  pandapower_stateful_test.py  pandapower_verified_test.py  plot_bench.py  plot_solve_breakdown.py  plot_time_breakdown.py  profile_solve.py  spy_plot.py  test_duckdb_integration.py  test_factory.py  test_full_archive.py  test_hardcore_polars.py  test_metadata_and_archive.py  test_new_wrapper.py  test_parquet_magic.py  test_parquet_virtual_fs.py  test_py_wrapper.py  validate_118.py  validate_118_high_prec.py  validate_118_zero_taps.py
src/: lib.rs  python.rs
src/basic/: bench_jacobian_fill.rs  d2sbr_dv2.rs  d2sbus_dv2.rs  dsbr_dv.rs  dsbus_dv.rs  iwamoto.rs  mod.rs  new_dsdvbus.rs  new_dsdvbus2.rs  new_dsdvbus3.rs  newtonpf.rs  pf_old_impl.rs  solver.rs  test_jacobian_pattern.rs
src/basic/ecs/: archive.rs  defer_builder.rs  elements.rs  factory.rs  mod.rs  network.rs  plugin.rs  post_processing.rs  switch.rs  systems.rs
src/basic/ecs/elements/: bus.rs  ele_process.rs  generator.rs  line.rs  load.rs  pf.rs  sgen.rs  shunt.rs  switch.rs  trans.rs  units.rs
src/basic/ecs/elements/switch/: comps.rs
src/basic/ecs/post_processing/: res_display.rs
src/basic/ecs/powerflow/: branch_data.rs  init.rs  mod.rs  mutation.rs  nonlinear_schedule.rs  pf_init.rs  qlim.rs  result_extract.rs  structure_update.rs  systems.rs
src/basic/new_ecs/: elements.rs  mod.rs  network.rs  plugin.rs  post_processing.rs  switch.rs  systems.rs
src/basic/new_ecs/post_processing/: res_display.rs
src/basic/solver/: faer.rs  klu.rs  rsparse.rs
src/basic/sparse/: cast.rs  conj.rs  mod.rs  slice.rs  stack.rs  utils.rs
src/basic/system/: admittance.rs  mod.rs  system.rs  test_ieee39.rs
src/bevy_cmdbuffer/: buffer.rs  mod.rs  task.md
src/io/: mod.rs  pandapower.rs
src/io/archive/: aurora_format.rs  mod.rs
src/io/pandapower/: ecs_net_conv.rs  file_io.rs  mod.rs  network_converter.rs  opf_io.rs
src/new_opf/: components.rs  math_verify.rs  mod.rs  numeric.rs  pips.rs  problem.rs  symbolic.rs  translate.rs  v3_numeric.rs  v3_numeric_fused.rs  v3_numeric_scalar.rs  v3_symbolic.rs  v4_numeric_rect.rs  v5_2_kernel.rs  v5_3_kernel.rs  v5_5_evaluator.rs  v5_6_evaluator.rs  v5_kkt.rs
src/new_pf/: builder.rs  mod.rs  solver.rs  systems.rs
src/opf/: builder.rs  constraints.rs  cost.rs  hessian.rs  mod.rs  pips.rs  problem.rs
src/python/: grid.rs  handles.rs  mod.rs  network.rs  solver.rs
src/testcases/: case_ieee39.rs  mod.rs
src/timeseries/: archive.rs  mod.rs  scheduled.rs  sim_time.rs  state.rs
tech_doc/: baseline_hessian.md  branch_hessian_v3.md  doc2.md  final_report.md  opf_hessian_first_principles.md  rustpower中的数学原理（in chinese）.md
