 [package]
name = "rustpower"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]
default-members = [
    "."
]
[features]
default=["archive","rsparse"]
klu = ["dep:rustpower-sol-klu"]
faer = ["dep:faer"]
rsparse = ["dep:rsparse"]
archive = ["dep:bevy_archive","dep:const_format"]

[profile.release]
opt-level = 3              
overflow-checks = false     # Disable integer overflow checks.
lto = "fat"

[dependencies]
ordered-float = { version = ">3.0", default-features = false }
nalgebra = { version = ">=0.32.0", features = ["serde-serialize"] }
nalgebra-sparse = { version = ">=0.7.0", features = ["serde-serialize"] }
simba = ">=0.9.0"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
num-traits = ">=0.2"
num-derive = ">=0.3"
num-complex = ">=0.4"
rsparse = {version ="^1.2", optional = true}
csv = "^1.3.0"
zip = "^3.0.0"
bevy_ecs = "^0.16.0"
bevy_app = "^0.16.0"
derive_more = { version = "^1.0", features = ["full"] }
tabled = "^0.16.0"
bevy_archive = {git="https://github.com/chengts95/bevy_archive", optional = true}
const_format = {version = "^0.2.34", optional = true}
faer = {version = "^0.22", optional = true}
[dependencies.rustpower-sol-klu]
path = "./crates/rustpower-sol-klu"
optional = true
