 [package]
name = "rustpower"
version = "0.3.3"
edition = "2024"
authors = ["cts chengts95@msn.cn"]
description = "An experimental ECS world snapshot system built on Bevy, featuring structured archetype storage and manifest-based serialization."
license = "MPL-2.0"
repository = "https://github.com/chengts95/rustpower"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]
default-members = [
    ".",
    "crates/rustpower_proc_marco",
]
[features]
default=["rsparse","archive"]
klu = ["dep:rustpower-sol-klu"]
faer = ["dep:faer"]
rsparse = ["dep:rsparse"]
archive = []
[profile.release]
opt-level = 3              
overflow-checks = false     # Disable integer overflow checks.


[dependencies]
ordered-float = { version = ">3.0", default-features = false }
nalgebra = { version = ">=0.32.0", features = ["serde-serialize"] }
nalgebra-sparse = { version = ">=0.7.0", features = ["serde-serialize"] }
simba = ">=0.9.0"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
num-traits = ">=0.2"
num-derive = ">=0.3"
num-complex = ">=0.4"
rsparse = {version ="^1.2", optional = true}
csv = "^1.3.0"
zip = "^4.0.0"
bevy_ecs = "^0.16.0"
bevy_app = "^0.16.0"
derive_more = { version = "^1.0", features = ["full"] }
tabled = "^0.16.0"
bevy_archive = {version = "0.1.4"}
const_format = {version = "^0.2.34"}
faer = {version = "^0.22", optional = true}
rustpower_proc_marco = {path = "crates/rustpower_proc_marco", version = "0.3.0"}
bumpalo = "^3.17.0"
[dependencies.rustpower-sol-klu]
path = "./crates/rustpower-sol-klu"
version = "0.1.0"
optional = true
