[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "rustpower"
description = "A high-performance power system analysis library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [
    { name = "chengts95" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering", 
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",  
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/chengts95/rustpower"
Repository = "https://github.com/chengts95/rustpower.git"
Bug-Tracker = "https://github.com/chengts95/rustpower/issues"