[package]
name = "rustpower-klu-sys"
version = "0.1.1"
edition = "2021"
description = "Auto generated bindings for the klu library."
license = "MPL-2.0"
repository = "https://github.com/chengts95/rustpower"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "^0.72.1"
